# ChessOxygine

./: CMakeLists.txt  README.md  resources.xml  run.sh
data/: resources.xml
data/images/: resources.xml
inc/: Board.h  ChessPiece.hpp  GameConfig.h  Piece.h  RuleChecker.h  UI.h
src/: Board.cpp  Board.h  GameConfig.cpp  Piece.cpp  Piece.h  RuleChecker.cpp  UI.cpp  main.cpp
